--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.2",
     "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
@@ -25,7 +27,6 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "vite": "^5.4.1"
+    "vite": "^5.4.8"
   }
 }
